# Dual-engine-divergence-trading-system

./: .env.example  .gitignore  DEPLOY.md  README.md  pyproject.toml
dual_engine_trader/: __init__.py  config.py  live_runner.py  logger.py
dual_engine_trader/analytics/: __init__.py  analyzer.py  monthly_analyzer.py  monthly_self_improving.py  self_improving_types.py
dual_engine_trader/backtest/: __init__.py  account.py  engine.py  grid_search.py
dual_engine_trader/data/: __init__.py  downloader.py  reconciler.py  store.py  streamer.py
dual_engine_trader/execution/: __init__.py  alerts.py  executor.py
dual_engine_trader/strategy/: __init__.py  detector.py  engine.py  indicators.py
tests/: test_strategy.py
